improved page scaling on mobile, bugfixes

--- a/static/styles/authentication.css
+++ b/static/styles/authentication.css
@@ -74,7 +74,7 @@
 
 #footer
 {
-	background-color:#80afff;
+	background-color:#1552bd;
 	bottom:0;
 	color:#FFF;
 	font-family:monospace;
@@ -82,7 +82,7 @@
 	height:20px;
 	position:absolute;
 	text-align:center;
-	width:100%;
+	width:100vw;
 }
 
 #form_container
